# hyperparameter

./: .gitignore  .pre-commit-config.yaml  404.html  Cargo.toml  LICENSE  README.md  README.zh.md  README_CN.md  build.rs  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  run_benchmark.py  setup.py  sitemap.xml
.cargo/: config
.github/workflows/: codecov.yml  mkdocs.yml  python-publish.yml  test.yml
api_reference/: index.html
api_reference.zh/: index.html
architecture/: index.html
architecture.zh/: index.html
benches/: bench_apis.rs
benchmark/: bench_hp.py  bench_hp_dynamic_global.py  bench_hp_dynamic_local.py  bench_hp_injected.py  bench_hydra.py  config.yaml
cookbook/: index.html
cookbook.zh/: index.html
core/: Cargo.toml  README.md
core/benches/: bench_apis.rs
core/examples/: cfg.toml  clap_full.rs
core/src/: api.rs  cfg.rs  cli.rs  ffi.rs  lib.rs  storage.rs  value.rs  xxh.rs
core/tests/: stress_threads.rs  with_params_expr.rs
docs/: api_reference.md  api_reference.zh.md  architecture.md  architecture.zh.md  cookbook.md  cookbook.zh.md  index.md  index.zh.md  migration_from_hydra.md  migration_from_hydra.zh.md  quick_start.md  quick_start.zh.md  reference.md  structured_parameter.md
docs/examples/: optimization.md  optimization.zh.md
examples/: clap_app.rs  cli_autoparam.py  debug_server.rs  with_config.rs
examples/application/: README.md  app.py  cfg.json
examples/automl_optuna_mnist/: automl_mnist.py
examples/cpp/: cxx_test.cc  cxx_test.py  cxx_test.sh  test.cc  test.sh
examples/mnist/: main_with_hp.py  main_with_hp_with_mlflow.py
examples/optimization/: index.html
examples/optimization.zh/: index.html
examples/optuna/: README.md  example.py  example_hp.py  example_hp_nested.py
examples/rust/: README.zh.md  clap_layered.rs  clap_mini.rs
examples/sparse_lr/: README.md  example_1.py  example_2.py  example_mlflow.py  model.py
hparam/: __main__.py
hparam_old/: __main__.py
hyperparameter/: Cargo.toml  __init__.py  analyzer.py  api.py  cli.py  debug.py  hp.py  hyperparameter.h  hyperparameter.py  loader.py  old.py  storage.py  tracker.py  tune.py
hyperparameter/examples/: __init__.py  quickstart.py
hyperparameter/src/: debug.rs  ext.rs  lib.rs
index.zh/: index.html
migration_from_hydra/: index.html
migration_from_hydra.zh/: index.html
quick_start/: index.html
quick_start.zh/: index.html
reference/: index.html
search/: search_index.json
src/: api.rs  cfg.rs  cli.rs  debug_server.rs  entry.rs  ext.rs  ffi.rs  hyperparameter.h  lib.rs  storage.rs  tls_storage.rs  tree_storage.rs  value.rs  xxh.rs
src/core/: Cargo.toml  README.md  README.zh.md
src/core/benches/: bench_apis.rs
src/core/examples/: clap_full.rs  clap_layered.rs  clap_mini.rs
src/core/src/: api.rs  cfg.rs  ffi.rs  lib.rs  storage.rs
src/core/tests/: stress_threads.rs  test_async.rs  test_cli.rs  test_tokio_runtime_config.rs  test_with_params.rs  test_with_params_edge_cases.rs  test_with_params_recursive_tokio.rs  with_params_expr.rs
src/debug/: async_server.rs  debug_server.rs  mod.rs
src/macros/: Cargo.toml
src/macros/src/: lib.rs
src/py/: Cargo.toml
src/py/src/: ext.rs
structured_parameter/: index.html
tests/: a.out  conftest.py  cxx_test.cc  cxx_test.py  cxx_test.sh  test_analyzer.py  test_auto_param.py  test_cli.rs  test_cli_config.py  test_edge_cases.py  test_hash_consistency.py  test_launch.py  test_loader.py  test_loader_interpolation.py  test_loader_validation.py  test_param_scope.py  test_param_scope_async_thread.py  test_param_scope_thread.py  test_rust_backend.py  test_schema_validation.py  test_stress_async_threads.py  test_with_params.rs
