[package]
name = "hyperparameter"
version = "0.5.7"
authors = ["reiase <reiase@gmail.com>"]
edition = "2021"
keywords = ["config", "env"]

[lib]
name = "hyperparameter"
crate-type = ["rlib", "staticlib"]

[dependencies]
backtrace = "0.3.69"
lazy_static = "1.4.0"
phf = { version = "0.11", features = ["macros"] }
signal-hook = "0.3.17"
tokio = { version = "1.31.0", features = ["full"] }

[dev-dependencies]
proptest = "1.2.0"

[profile.dev]
overflow-checks = false
