[package]
name = "hyperparameter"
version = "0.5.7"
license = "Apache-2.0"
description = " Hyperparameter, Make configurable AI applications.Build for Python hackers. "
homepage = "https://reiase.github.io/hyperparameter/"
readme = "README.md"
repository = "https://github.com/reiase/hyperparameter"
authors = ["reiase <reiase@gmail.com>"]
edition = "2021"
keywords = ["config", "env", "cli", "machine-learning"]
categories = ["config", "science"]
exclude = [
    ".cargo",
    ".github",
]
[lib]
name = "hyperparameter"
crate-type = ["rlib", "staticlib"]

[dependencies]
backtrace = "0.3.69"
lazy_static = "1.4.0"
phf = { version = "0.11", features = ["macros"] }
signal-hook = "0.3.17"
tokio = { version = "1.31.0", features = ["full"] }
xxhash-rust = { version = "0.8.7", features = ["xxh3", "xxh64", "const_xxh64"] }
const-str = "0.5.6"
nu-ansi-term = "0.49.0"
local-ip-address = "0.5.6"

[dev-dependencies]
proptest = "1.2.0"
criterion = "0.5.1"
clap = { version = "4.4.7", features = ["derive"] }

[profile.dev]
overflow-checks = false

[[bench]]
name = "bench_apis"
harness = false
