[build-system]
requires = ["maturin>1.0.0,<=1.0.1"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "src/py/Cargo.toml"
module-name = "hyperparameter.librbackend"
features = ["pyo3/extension-module"]
exclude = [
    "src/**/target/**",
    "src/py/Cargo.lock",
    "hyperparameter/__pycache__/**",
]

[project]
name = "hyperparameter"
version = "0.5.14"
authors = [{ name = "Reiase", email = "reiase@gmail.com" }]
description = "A hyper-parameter library for researchers, data scientists and machine learning engineers."
requires-python = ">=3.7"
readme = "README.md"
license = { text = "Apache License Version 2.0" }
dependencies = ["toml>=0.10"]


[tool.black]
line-length = 88

[tool.flake8]
extend-ignore = ["E203", "E501"]
max-line-length = 88
count = true

[tool.isort]
atomic = true
profile = "black"
line_length = 88

[tool.coverage.run]
branch = true
source = ["hyperparameter"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --durations=5 --doctest-modules --doctest-glob=*.md"
testpaths = ["hyperparameter/", "docs", "tests/"]
