[package]
name = "hyperparameter"
version = "0.5.9"
license = "Apache-2.0"
description = "A high performance configuration system for Rust and Python."
homepage = "https://reiase.github.io/hyperparameter/"
readme = "examples/rust/README.md"
repository = "https://github.com/reiase/hyperparameter"
authors = ["reiase <reiase@gmail.com>"]
edition = "2021"
keywords = ["config", "env", "cli", "machine-learning"]
categories = ["config", "science"]
exclude = [
    ".cargo",
    ".github",
]

[features]
default = ["json", "toml", "ini", "clap"]
json = ["config/json"]
toml = ["config/toml"]
ini = ["config/ini"]
clap = ["dep:linkme", "dep:clap"]

[lib]
name = "hyperparameter"
crate-type = ["rlib", "staticlib"]

[dependencies]
backtrace = "0.3.69"
lazy_static = "1.4.0"
phf = { version = "0.11", features = ["macros"] }
signal-hook = "0.3.17"
tokio = { version = "1.31.0", features = ["full"] }
xxhash-rust = { version = "0.8.7", features = ["xxh3", "xxh64", "const_xxh64"] }
const-str = "0.5.6"
config = "0.14.0"
linkme = {version = "0.3", optional = true}
clap = {version = "4.4.7", optional = true}

[dev-dependencies]
proptest = "1.2.0"
criterion = "0.5.1"
clap = { version = "4.4.7", features = ["derive"] }

[profile.dev]
overflow-checks = false

[[bench]]
name = "bench_apis"
harness = false

[[example]]
name = "clap_mini"
path = "examples/rust/clap_mini.rs"

[[example]]
name = "clap_layered"
path = "examples/rust/clap_layered.rs"

[[example]]
name = "clap_full"
path = "examples/rust/clap_full.rs"
