[package]
name = "hyperparameter"
version = "0.6.0"
license = "Apache-2.0"
description = "A high performance configuration system for Rust."
homepage = "https://reiase.github.io/hyperparameter/"
readme = "README.md"
repository = "https://github.com/reiase/hyperparameter"
authors = ["reiase <reiase@gmail.com>"]
edition = "2021"
keywords = ["config", "env", "cli", "machine-learning"]
categories = ["config", "science"]
exclude = [".cargo", ".github"]

[features]
default = ["json", "toml", "clap", "tokio-task-local"]
json = ["config/json"]
toml = ["config/toml"]
clap = ["dep:linkme", "dep:clap"]
tokio-task-local = ["tokio"]

[lib]
name = "hyperparameter"
crate-type = ["rlib", "staticlib"]

[dependencies]
lazy_static = "1.4.0"
phf = { version = "0.11", features = ["macros"] }
xxhash-rust = { version = "0.8.7", features = ["xxh3", "xxh64", "const_xxh64"] }
const-str = "0.5.6"
config = { version = "0.14.0", default-features = false }
linkme = { version = "0.3", optional = true }
clap = { version = "4.4.7", optional = true }
tokio = { version = "1", features = ["macros", "rt"], optional = true }
hyperparameter-macros = { path = "../macros" }

[dev-dependencies]
proptest = "1.2.0"
criterion = "0.5.1"
clap = { version = "4.4.7", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time"] }

[profile.dev]
overflow-checks = false

[profile.release]
strip = "debuginfo"
lto = true

[[bench]]
name = "bench_apis"
harness = false
